--- a/index.htm
+++ b/index.htm
@@ -7,5 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <iframe
+      id="inlineFrameExample"
+      title="Inline Frame Example"
+      width="600"
+      height="400"
+      src="https://baarbarg.ir/"
+    >
+    </iframe>
+  </body>
 </html>
