--- a/index.htm
+++ b/index.htm
@@ -8,13 +8,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <iframe
-      id="inlineFrameExample"
-      title="Inline Frame Example"
-      width="600"
-      height="400"
-      src="https://baarbarg.ir/"
-    >
-    </iframe>
+    <div class="div">
+      <script
+        async
+        src="https://cse.google.com/cse.js?cx=a6147666fbe5342ac"
+      ></script>
+      <div class="gcse-search"></div>
+    </div>
   </body>
 </html>
