--- a/index.htm
+++ b/index.htm
@@ -8,12 +8,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="div">
-      <script
-        async
-        src="https://cse.google.com/cse.js?cx=a6147666fbe5342ac"
-      ></script>
-      <div class="gcse-search"></div>
+    <script type="text/javascript">
+        atOptions = {
+            'key' : '01df0a309422de42ef172e927eb8370b',
+            'format' : 'iframe',
+            'height' : 250,
+            'width' : 300,
+            'params' : {}
+        };
+        document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://baarbarg.ir/invoke.js"></scr' + 'ipt>');
+    </script>
     </div>
   </body>
 </html>
