--- a/index.htm
+++ b/index.htm
@@ -9,15 +9,20 @@
   </head>
   <body>
     <script type="text/javascript">
-        atOptions = {
-            'key' : '01df0a309422de42ef172e927eb8370b',
-            'format' : 'iframe',
-            'height' : 250,
-            'width' : 300,
-            'params' : {}
-        };
-        document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://baarbarg.ir/invoke.js"></scr' + 'ipt>');
+      atOptions = {
+        key: "01df0a309422de42ef172e927eb8370b",
+        format: "iframe",
+        height: 250,
+        width: 300,
+        params: {},
+      };
+      document.write(
+        "<scr" +
+          'ipt type="text/javascript" src="http' +
+          (location.protocol === "https:" ? "s" : "") +
+          '://baarbarg.ir/invoke.js"></scr' +
+          "ipt>"
+      );
     </script>
-    </div>
   </body>
 </html>
