--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <embed src="https://baarbarg.ir" style="width: 500px; height: 300px" />
+    <div>
+      <object
+        type="text/html"
+        data="https://baarbarg.ir/"
+        width="800px"
+        height="600px"
+        style="overflow: auto; border: 5px ridge blue"
+      ></object>
+    </div>
   </body>
 </html>
