--- a/index.htm
+++ b/index.htm
@@ -8,14 +8,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>
-      <object
-        type="text/html"
-        data="https://baarbarg.ir/"
-        width="800px"
-        height="600px"
-        style="overflow: auto; border: 5px ridge blue"
-      ></object>
-    </div>
+    <webview
+      src="https://baarbarg.ir"
+      style="width: 100%; height: 100vh"
+    ></webview>
   </body>
 </html>
