--- a/index.htm
+++ b/index.htm
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
   </head>
   <body>
-    <webview
+    <iframe
       src="https://baarbarg.ir"
       style="width: 100%; height: 100vh"
-    ></webview>
+    ></iframe>
   </body>
 </html>
