--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
   </head>
   <body>
     <iframe
-      src="http://baarbarg.ir"
+      src="https://baarbarg.ir"
       style="width: 100%; height: 100vh"
     ></iframe>
   </body>
