--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <script>
+      await fetch('https://baarbarg.ir', {credentials: 'omit'});
+    </script>
   </head>
   <body>
     <iframe
