--- a/index.htm
+++ b/index.htm
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    <script>
-      await fetch('https://baarbarg.ir', {credentials: 'omit'});
-    </script>
   </head>
   <body>
     <iframe
       src="https://baarbarg.ir"
       style="width: 100%; height: 100vh"
     ></iframe>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
