--- a/index.htm
+++ b/index.htm
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <sessionState
+      mode="InProc"
+      **cookieless="UseCookies"
+      cookieSameSite="None"
+      **
+      timeout="20"
+    />
     <iframe
       src="https://baarbarg.ir"
       style="width: 100%; height: 100vh"
     ></iframe>
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
